# 2048

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: käyttöohje.md  testausdokumentti.md  toteutusdokumentti.md  vaatimusmaarittely.md  viikkoraportti_1.md  viikkoraportti_1.md.save  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: algoritmi.py  main.py  peli.py
src/tests/: test_algoritmi.py  test_main.py  test_pelialusta.py
