[tool.poetry]
name = "2048"
version = "0.1.0"
description = ""
authors = ["Tiina <tiina.kuisma@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
keyboard = "^0.13.5"
pynput = "^1.7.6"
pylint = "^2.15.9"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
coverage = "^6.5.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
